--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "resend": "^6.5.2",
+    "retell-sdk": "^4.66.0",
     "sonner": "^2.0.7",
     "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
